@@ -39,7 +39,7 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008 by Dominique Dumont
+Copyright (C) 2008-2009 by Dominique Dumont
 
 This library is free software; you can redistribute it and/or
 modify it under the terms of the GNU Lesser Public License as
